# just-eat-takeaway-assessment-submission

./: .gitignore  README.md  docker-compose.yml
backend-jet/: .dockerignore  .gitignore  DOCS.md  Dockerfile  Dockerfile.test  README.md  pyproject.toml
backend-jet/alembic/: env.py
backend-jet/alembic/versions/: 20260421_0500_create_restaurants_table.py  20260422_0001_create_saved_restaurants_table.py  20260422_0002_add_user_rating_to_saved_restaurants.py
backend-jet/app/: config.py  main.py
backend-jet/app/api/: discovery.py  router.py  saved.py
backend-jet/app/db/: models.py  session.py
backend-jet/app/modules/discovery/: adapter.py  mapper.py  schemas.py  service.py
backend-jet/app/modules/saved/: schemas.py  service.py
backend-jet/app/repositories/: restaurant_repository.py  saved_restaurant_repository.py
backend-jet/app/shared/: error_handlers.py  errors.py  redis.py
backend-jet/tests/: conftest.py  test_health.py  test_startup.py
backend-jet/tests/api/: test_discovery.py  test_saved.py
backend-jet/tests/modules/discovery/: test_adapter.py  test_mapper.py  test_service.py
backend-jet/tests/modules/saved/: test_saved_service.py
backend-jet/tests/repositories/: test_restaurant_repository.py  test_saved_restaurant_repository.py
frontend-jet/: .dockerignore  DOCS.md  Dockerfile.test  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend-jet/src/: App.tsx  index.css
frontend-jet/src/components/: CelebrationOverlay.tsx  Pippo.tsx
frontend-jet/src/hooks/: useTabArrowNav.ts
(+26 files in other folders)
